# kilosim-gridbots-decisions

./: .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  LICENSE  README.md  benchmark_gen_config.yml  data_dirs.txt  data_dirs_split_0.txt  data_dirs_split_1.txt  data_dirs_split_10.txt  data_dirs_split_11.txt  data_dirs_split_12.txt  data_dirs_split_13.txt  data_dirs_split_14.txt  data_dirs_split_15.txt  data_dirs_split_2.txt  data_dirs_split_3.txt  data_dirs_split_4.txt  data_dirs_split_5.txt  data_dirs_split_6.txt  data_dirs_split_7.txt  data_dirs_split_8.txt  data_dirs_split_9.txt  fixed_data_dirs.txt  fixed_data_dirs_split_0.txt  fixed_data_dirs_split_1.txt  fixed_data_dirs_split_10.txt  fixed_data_dirs_split_11.txt  fixed_data_dirs_split_12.txt  fixed_data_dirs_split_13.txt  fixed_data_dirs_split_14.txt  fixed_data_dirs_split_15.txt  fixed_data_dirs_split_2.txt  fixed_data_dirs_split_3.txt  fixed_data_dirs_split_4.txt  fixed_data_dirs_split_5.txt  fixed_data_dirs_split_6.txt  fixed_data_dirs_split_7.txt  fixed_data_dirs_split_8.txt  (+28 more)
.vscode.bak/: c_cpp_properties.json  settings.json
api/: BaseBot.h  BaseBot.hpp
src/: Bot.cpp  HybridBot.cpp  SweepBot.cpp  main.cpp
